test/parser/valid/class_structure/public_interfaces.java
  public interface public_interfaces {}
