test/parser/bad/class_structure/nested_types.java
protected class A {
  public class B {}
}

